Table quality loooking good part 2

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
                     <td>Phronesis</td>
                     <td>Trajectory</td>
                     <td>Telos</td>
+                    <td>Universe</td>
                 </tr>
                 <tr>
                     <td>Pride (Hubris)</td>
@@ -29,6 +30,7 @@
                     <td>Medium</td>
                     <td>Decreasing</td>
                     <td>Tragic Fall</td>
+                    <td>Classical Drama</td>
                 </tr>
             </table>
         </div>
